--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ button {
   margin: 5px;
   color: yellow;
   background-color: black;
-  border: none;
+  border: 2px solid yellow;
   width: 20vw;
   height: 6vh;
   border-radius: 8px;
@@ -16,7 +16,11 @@ button:hover {
   background-color: yellow;
   font-weight: 600;
   cursor: pointer;
+  border: 2px solid black;
+  border-radius: 15px;
 }
-h2 {
+h2,
+h1 {
   color: rgb(10, 10, 177);
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
